# QT-Paint

./: .gitignore  CMakeLists.txt  drawingwidget.cpp  drawingwidget.h  main.cpp  mainwindow.h  mywindow.cpp  mywindow.h  paint.cpp  paint.h
shapes/: default_shape.cpp  default_shape.h  ellipse.cpp  ellipse.h  rectangle.cpp  rectangle.h  shape.h  shapes_types.cpp  shapes_types.h  triangle.cpp  triangle.h
straregy/: action_strategy.h  shapes_strategy.cpp  shapes_strategy.h
strategy/: action_strategy.cpp  action_strategy.h  connection_strategy.cpp  connection_strategy.h  delete_strategy.cpp  delete_strategy.h  move_strategy.cpp  move_strategy.h  shapes_strategy.cpp  shapes_strategy.h
